Making Readme more streamlined