@@ -5,40 +5,19 @@
 
 FenixEdu Academic is a open source Student Information System. It provides the back office system where schools manage students, teachers, degrees and courses. Take a look at [FenixEdu.org](http://fenixedu.org/) for more information.
 
-**Table of Contents**
+## Getting Started
 
-- [Issue Tracking](#issue-tracking)
-- [Setup environment](#setup-environment)
-- [Compiling](#compiling)
-- [Bootstrapping](#bootstrapping)
-- [Generate Fenix DML Zip](#generate-fenix-dml-zip)
+To start developing using FenixEdu Academic you should take a look to our documentation site:
+
+[https://confluence.fenixedu.org/display/ACADEMIC/Welcome](https://confluence.fenixedu.org/display/ACADEMIC/Welcome)
+
+It includes tutorials and examples so you can learn how to use the Bennu Framework
 
 ##Issue Tracking
 
 Issue Tracking for the FenixEdu Academic project is done in the [FenixEdu JIRA](https://jira.fenixedu.org/browse/ACADEMIC).
 
-##Setup environment
-1. `export JAVA_OPTS="-server -Xms256m -Xmx1024m -XX:PermSize=384m"`
-2. `export MAVEN_OPTS="$JAVA_OPTS"`
 
+## Contribute
 
-##Compiling
-  
-To compile Fenix, simply run:
-
-    mvn clean install
-    
-##Bootstrapping
-
-To initialize an instalation of Fenix in an empty Database, see: 
-
-https://confluence.fenixedu.org/display/ACADEMIC/Installation
-
-##Generate Fenix DML Zip
-
-    mvn ff:package-dmls
-
-creates `target/fenix_dmls.zip`
-
-It can be used to upload in [Fenix Domain Browser](https://fenix-ashes.ist.utl.pt/fdb)
-
+FenixEdu Academic is open source LGPL 3. We welcome interest in the project and are open to your contributions
